# dhvani-tts

./: .gitignore  CMakeLists.txt
src/: dhvani_lib.c  oggencoder.c
